<resources>
    <string name="app_name">Smart Service World</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_c">Accept terms and conditions</string>
    <string name="tab2">Service provider</string>
    <string name="tab1">Customer</string>
    <string name="cpass">Confirm your password</string>
    <string name="location">Enter your location</string>
    <string name="phone_number">Please enter your authorized phone number</string>
    <string name="email">Enter your email</string>
    <string name="name">Enter your name</string>
    <string name="password">Enter your password</string>
    <string name="sign_up">Sign up</string>
    <string name="already">Already have account?</string>
    <string name="login">Login</string>
    <string name="noaccount">Not created account yet?</string>
    <string name="register">Register</string>
    <string name="cpassword">Confirm your password</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="accounts">
        <item>Customer</item>
        <item>Service Provider</item>
    </string-array>

    <string-array name="services">
        <item>Plumbing service</item>
        <item>Car repair service</item>
        <item>Electrician service</item>
        <item>Mestri service</item>
        <item>Wall painter service</item>
        <item>Carpainter service</item>
        <item>Welding service</item>
        <item>Car wash service</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="serviceImageDesc">ServiceImage</string>
    <string name="service_name">Service name</string>
    <string name="available_services_title">Available services</string>
    <string name="choose_acc">Choose account type</string>
    <string name="update_profile">Update profile</string>
    <string name="appname_part1">Smart</string>
    <string name="appname_part2">Service World</string>
    <string name="save_changes_btn">Save changes</string>
    <string name="upload_photo_btn">Upload photo</string>
    <string name="profile_image_description">Profile image</string>
    <string name="user_name_label">User name</string>
    <string name="service_role_place_holder">Service name</string>
    <string name="user_location_place_holder">User location</string>
    <string name="phone_number_place_holder">Phone number</string>
    <string name="phone_number_label">Phone number:</string>
    <string name="email_address_label">Email address:</string>
    <string name="user_email_place_holder">User email</string>
    <string name="location_label">Location:</string>
    <string name="profile_image_contenDesc">Profile Image</string>
    <string name="service_provider_name_place_holder">Service Provider Name</string>
    <string name="serviceman_rating">4.4</string>
    <string name="location_place_holder">Location</string>
    <string name="availability">Available or not</string>
    <string name="enter_new_name_label">Enter new name</string>
    <string name="enter_new_location_label">Enter new location</string>
    <string name="enter_new_phone_no_label">Enter new phone no.</string>
    <string name="select_your_new_service_label">Select your new service</string>
    <string name="select_your_services_place_holder">Select your services</string>
    <string name="rating_star_desc">Rating Star</string>
    <string name="enter_your_otp_place_holder">Enter your OTP</string>
    <string name="send_otp_btn">Send OTP</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="service_man_rating">4.4</string>
    <string name="phoneNumber">Enter your phone number</string>
    <string name="provider_image_desc">Service provider image</string>
    <string name="provider_availability">Available</string>
    <string name="provider_name_label">Name</string>
    <string name="service_providers_name">Service provider\'s name</string>
    <string name="call_service_provider_btn">Call service provider</string>
    <string name="request_service_btn">Request service</string>
    <string name="mark_as_favourite_btn">Mark as Favourite</string>
    <string name="report_btn">Report service provider</string>
    <string name="bottomicon_requested">Requested</string>
    <string name="request_status">Requested</string>
    <string name="logout_option_menu">logout</string>

    <string name="serverkey">AAAAyi1Rk20:APA91bHMPxTtNBIuG_Da0jFdZXpNzbSD1PpwzkWbPdC7njikW8gTmhC14m3D27jmv_0Rlcj3lNC34QZUWaxoeCWTGD1joWWZ1z2oyTK5_ubYExnQo1HALVrl8OS4c_LsEwYRWMUltOwy</string>
    <string name="notification_title">Service request</string>
    <string name="customer_name">Customer name</string>
    <string name="customer_location">Location</string>
    <string name="notificationList_customer_name">CustomerName</string>
    <string name="notificationList_location">location</string>
    <string name="notificationList_request_status">Request status</string>
    <string name="reject_txt">Reject</string>
    <string name="accept_txt">Accept</string>
    <string name="accepted_status">Accepted</string>
    <string name="delete_icon">delete_icon</string>
    <string name="service_name_label">Service name</string>
    <string name="service_name_place_holder">service_name</string>
</resources>