<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_8sdp"
    android:layout_margin="@dimen/_2sdp"
    android:elevation="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/serviceProviderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/service_provider_name_place_holder"
                android:textSize="@dimen/_15ssp"
                android:layout_toStartOf="@+id/rating"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_toStartOf="@+id/ratingStar"
                android:text="@string/service_man_rating"
                android:textColor="@color/orange"

                />

            <ImageView
                android:id="@+id/ratingStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:contentDescription="@string/rating_star_desc"
                android:src="@drawable/baseline_star_rate_24"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_role_place_holder"
            android:layout_marginTop="@dimen/_2sdp"
            android:id="@+id/service_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_place_holder"
            android:layout_marginTop="@dimen/_2sdp"
            android:id="@+id/locTxt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability"
            android:layout_marginTop="@dimen/_2sdp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:id="@+id/availableOrNotTxt"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>