<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/_8sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_6sdp"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:elevation="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom= "@dimen/_8sdp"
                android:text="@string/notificationList_customer_name"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                android:layout_weight="1"
                android:id="@+id/customerName"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_delete_24"
                android:visibility="invisible"
                android:id="@+id/deleteBtn"
                android:contentDescription="@string/delete_icon" />
        </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:textSize="@dimen/_12ssp"
        android:text="@string/notificationList_location"

        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:text="@string/accept_txt"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:id="@+id/acceptText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:text="@string/reject_txt"
                android:layout_marginLeft="@dimen/_12sdp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:id="@+id/rejectText"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/requestStatusTxt"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:text="@string/notificationList_request_status"
            />


    </LinearLayout>
</androidx.cardview.widget.CardView>