<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SProviderFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange"
            android:id="@+id/nameBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/snameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange"
            android:id="@+id/emailBox"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/semailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sphonenoTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/slocationTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/spassTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/scpassTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpass"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/orange"
            android:text="@string/t_c" />

        <Button
            android:id="@+id/ssignupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"

            android:backgroundTint="@color/orange"
            android:text="@string/sign_up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/already" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:text="@string/login"
                android:id="@+id/sloginTxt"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>