<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_8sdp"
    android:layout_margin="@dimen/_2sdp"
    android:elevation="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:id="@+id/requested_providerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/service_provider_name_place_holder"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_role_place_holder"
            android:layout_marginTop="@dimen/_2sdp"
            android:id="@+id/requested_service_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_status"
            android:layout_marginTop="@dimen/_2sdp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:id="@+id/availableOrNotTxt"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>